# lokki

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  examples.yml  localstack.yml  publish.yml
dev/: README.md  create-bucket.sh  deploy-localstack.sh  docker-compose.yml  publish.sh  test-sam-local.sh
docs/: api.md  code-quality-plan.md  config.md  design.md  requirements.md  tasks-completed.md  tasks.md
docs/tasks/: README.md  m1.md  m10.md  m11.md  m12.md  m13.md  m14.md  m15.md  m16.md  m17.md  m18.md  m19.md  m2.md  m20.md  m21.md  m22.md  m23.md  m24.md  m25.md  m26.md  m27.md  m28.md  m29.md  m3.md  m30.md  m31.md  m32.md  m33.md  m34.md  m36.md  m37.md  m38.md  m4.md  m40.md  m41.md  m42.md  m44.md  m45.md  m46.md  m47.md  (+16 more)
examples/: birds_flow_example.py  nyc_taxi.py
examples/ci_test_pipeline/: flow.py  lokki.toml  pyproject.toml
examples/flights/: flights.py  lokki.toml  pyproject.toml
examples/nyc_taxi/: lokki.toml  nyc_taxi.py  pyproject.toml
examples/test_pipeline/: test_pipeline.py
examples/weather/: lokki.toml  pyproject.toml  weather.py
lokki/: __init__.py  _aws.py  _errors.py  _store.py  _utils.py  cli.py  config.py  decorators.py  deploy.py  destroy.py  graph.py  logging.py  logs.py  runner.py  s3.py  show.py
lokki/builder/: __init__.py  _graph.py  batch_pkg.py  builder.py  cloudformation.py  lambda_pkg.py  s3.py  sam_template.py  state_machine.py
lokki/cli/: __init__.py  deploy.py  destroy.py  error_utils.py  invoke.py  logs.py  show.py
tests/: conftest.py  test_aws.py  test_batch.py  test_batch_pkg.py  test_builder.py  test_builder.py.bak  test_builder_s3.py  test_cache.py  test_cli.py  test_cloudformation.py  test_cloudformation_builder.py  test_config.py  test_decorators.py  test_deploy.py  test_destroy.py  test_distributed_map.py  test_docker_images.py  test_error_utils.py  test_errors.py  test_graph.py  test_graph_validation.py  test_handler.py  test_init.py  test_integration.py  test_invoke.py  test_lambda_pkg.py  test_localstack.py  test_logging.py  test_logs.py  test_retry.py  test_runner.py  test_runtime_batch.py  test_runtime_batch_main.py  test_s3.py  test_sam_template.py  test_schedule.py  test_show.py  test_state_machine.py  test_state_machine_builder.py  test_store_memory.py  (+2 more)
(+46 files in other folders)
