[project]
name = "lokki"
version = "0.2.0"
description = "Python library for defining, building, and deploying data pipelines to AWS Step Functions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["boto3>=1.34.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "mypy>=1.0.0", "ruff>=0.1.0", "moto>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lokki"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.uv.workspace]
exclude = ["dev", "examples"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
