[project]
name = "flights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "duckdb>=1.4.4",
  "fast-flights>=2.2",
  "pandas>=3.0.1",
  "playwright>=1.58.0",
  "pyarrow>=23.0.1",
  "lokkiflow @ file:///${PROJECT_ROOT}/../../",
]
